Update Nuuk Web App.html

--- a/Nuuk Web App.html
+++ b/Nuuk Web App.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuuk Web App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="Nuuk Web App.css" />
+    <link rel="stylesheet" href="Nuuk Web App.css">
   </head>
   <body>
     <main>
-      <section id="banner">
-        <div class="navigation-wrapper">
+      <section id="backgroundimage">
+        <div class="navigationbar">
           <div class="brand">
             <a href="#">
               <img class="brand-logo" src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-white.png" alt="logo">
@@ -51,13 +51,11 @@
               <div class="text-block">Get Free Quote</div>
             </div>
           </nav>
-          <div class="humburge-icon">
-            <i class="fas fa-bars"></i>
-          </div>
+       
         </div>
         <div class="middle-content">
           <h1 class="top-title on-banner">
-            YOU DREAM. <br />
+            YOU DREAM. <br>
             WE CREATE.
           </h1>
           <p class="paragraph-white">
